--- a/css/style2.css
+++ b/css/style2.css
@@ -1455,8 +1455,6 @@ body {
     opacity: 0;
     animation: show-cta 2s 6s;
     animation-fill-mode: forwards;
-    background-color: #8584844b;
-    text-shadow: 2px 2px 2px #000;
     transition: 1s linear;
     cursor: pointer;
     -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -1476,7 +1474,9 @@ body {
       width: 100%;
       height: 100%;
       border-radius: 40px;
-      transition: .3s ease; }
+      transition: .3s ease;
+      border: none;
+      outline: none; }
     #home .hero #cta-header::before {
       box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a; }
     #home .hero #cta-header::after {
@@ -1485,10 +1485,6 @@ body {
       z-index: -1; }
     #home .hero #cta-header:hover {
       transform: scale(0.98); }
-      #home .hero #cta-header:hover::before {
-        opacity: 0; }
-      #home .hero #cta-header:hover::after {
-        opacity: 1; }
     #home .hero #cta-header:active {
       transition: .2s;
       transform: scale(0.94); }
@@ -1500,7 +1496,7 @@ body {
       font-size: 2em;
       font-weight: 700;
       animation: animate 3s ease-in-out infinite;
-      animation-delay: calc(5s + .2s * var(--i));
+      animation-delay: calc(6.5s + .2s * var(--i));
       /* cta keyframes*/
       /* end of cta keyframes*/ }
 
