--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -362,11 +362,11 @@ body {
             border-radius: 40px;
             border: none;
             outline: none;
-            opacity: 0;
+            opacity: 1;
             animation: show-cta 2s 6s;
             animation-fill-mode: forwards;
             // background-color: $button-background-grey;
-            transition: 1s linear;
+            transition: .3s linear;
             cursor: pointer;
             -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
             z-index: 2;
@@ -398,19 +398,22 @@ body {
             // ::after = background gradient
             &::after {
                 opacity: 1;
-                background-image: linear-gradient(40deg,#dc143c, $overlay-blue-light);
+                background-image: linear-gradient(90deg,#dc143c, $overlay-blue-light);
+                background-position: 0, 0;
+                background-size: 300%;
                 z-index: -1;
 
             }
             // button hover, focus and active states
             &:hover {
-                transform: scale(.98);
                 // &::before {opacity: 0;}
-                // &::after {opacity: 1;}
+                &::after {
+                    background-position: 100%;
+                }
             }
             &:active {
                 transition: .2s;
-                transform: scale(.94);
+                transform: scale(.95);
             }
             // end of button hover, focus and active states
             // end of button shadows
