cta-header::after animation

--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -402,7 +402,16 @@ body {
                 background-position: 0, 0;
                 background-size: 300%;
                 z-index: -1;
+                animation: 3s cta-btn infinite;
+                transition: .3s;
+                outline: none;
+                border: none;
 
+                @keyframes cta-btn {
+                    50% {
+                        background-position: 100%;
+                    }
+                }
             }
             // button hover, focus and active states
             &:hover {
