--- a/css/style2.css
+++ b/css/style2.css
@@ -1484,7 +1484,15 @@ body {
       background-image: linear-gradient(90deg, #dc143c, #485563);
       background-position: 0, 0;
       background-size: 300%;
-      z-index: -1; }
+      z-index: -1;
+      animation: 3s cta-btn infinite;
+      transition: .3s;
+      outline: none;
+      border: none; }
+
+@keyframes cta-btn {
+  50% {
+    background-position: 100%; } }
     #home .hero #cta-header:hover::after {
       background-position: 100%; }
     #home .hero #cta-header:active {
