skills top p color

--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -64,7 +64,7 @@
         transition: .2s linear;
 
         p {
-            color: #fff;
+            color: #ddd;
             font-size: .9em;
             font-weight: 500;
             @media (min-width: 768px){
