--- a/css/style2.css
+++ b/css/style2.css
@@ -253,7 +253,7 @@ hamburger
     #skills .skills-top {
       width: 60%; } }
   #skills .skills-top p {
-    color: #fff;
+    color: #ddd;
     font-size: .9em;
     font-weight: 500;
     background: transparent;
