--- a/css/style2.css
+++ b/css/style2.css
@@ -1263,6 +1263,19 @@ body {
         @media (min-width: 768px) {
           #header .header #navbar .brand h1 {
             font-size: 1.8em; } }
+      @media (max-width: 768px) {
+        #header .header #navbar .nav-list .links-container {
+          position: absolute;
+          top: 0;
+          left: 100%;
+          width: 100vw;
+          height: 100vh;
+          background-color: #1b2127;
+          transition: .5s ease; }
+          #header .header #navbar .nav-list .links-container ul {
+            margin: 20vh 5vw; } }
+      #header .header #navbar .nav-list .links-container.active {
+        left: 0; }
       @media (min-width: 768px) {
         #header .header #navbar .nav-list .links-container .nav-avi {
           display: none; } }
@@ -1289,12 +1302,7 @@ body {
           transition: .4s;
           transform: scale(0.7); }
       #header .header #navbar .nav-list ul {
-        position: absolute;
-        background: #1f1e1e;
-        width: 100vw;
-        height: 100vh;
-        left: 100%;
-        top: 0;
+        background: #29323c;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -1344,9 +1352,6 @@ body {
           #header .header #navbar .nav-list ul li:hover a::after {
             transform: translate(-50%, -50%) scale(1);
             letter-spacing: initial; }
-        #header .header #navbar .nav-list ul.active {
-          left: 20%;
-          background-color: #1b2127; }
       @media (min-width: 1024px) {
         #header .header #navbar .nav-list ul {
           position: initial;
