--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -148,7 +148,7 @@ body {
                             padding: .4em 0;
 
                             i {
-
+                                margin-left: .5em;
                             }
                         }
                     }
