nav bar ul style

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,13 +13,13 @@ $text-white-e: #eee;
 $text-white-d: #ddd;
 $text-lime: #bfee50;
 
-// span
+// span and border
 $span-crimson: #dc143c;
 $span-violet: violet;
 $span-blue: #0000ff;
 $span-crimson-dark: #dc143c8c;
 $span-orange: tomato ;
-// $span-crimson: #dc143c;
+$trans-border: rgba(255, 255, 255, 0.155);
 // link colors
 $link-blue: skyblue;
 $link-crimson: #dc143c;
