--- a/css/style2.css
+++ b/css/style2.css
@@ -1250,7 +1250,7 @@ body {
       justify-content: space-between;
       width: 100%;
       height: 100%;
-      padding: 3vh 5vw; }
+      padding: 1vh 5vw; }
       @media (max-width: 1024px) {
         #header .header #navbar {
           padding: 0 5vw; } }
@@ -1263,9 +1263,6 @@ body {
         @media (min-width: 768px) {
           #header .header #navbar .brand h1 {
             font-size: 1.5em; } }
-      @media (max-width: 380px) {
-        #header .header #navbar .nav-list .links-container {
-          overflow-y: scroll; } }
       @media (max-width: 1024px) {
         #header .header #navbar .nav-list .links-container {
           position: absolute;
@@ -1276,7 +1273,8 @@ body {
           background-color: #1b2127;
           transition: .5s ease; }
           #header .header #navbar .nav-list .links-container ul {
-            margin: 25vh 5vw; } }
+            margin: 25vh 5vw;
+            overflow-y: scroll; } }
       #header .header #navbar .nav-list .links-container.active {
         left: 0; }
       @media (min-width: 1025px) {
@@ -1293,8 +1291,8 @@ body {
         cursor: pointer; }
         @media (max-width: 360px) {
           #header .header #navbar .nav-list .links-container .nav-avi {
-            height: 4em;
-            width: 4em; } }
+            height: 3.5em;
+            width: 3.5em; } }
         #header .header #navbar .nav-list .links-container .nav-avi img {
           width: 100%;
           height: 100%;
@@ -1332,8 +1330,9 @@ body {
         overflow-x: hidden;
         transition: 0.5s ease left;
         position: relative;
-        border: none;
-        outline: none; }
+        border: 1px solid rgba(255, 255, 255, 0.155);
+        outline: none;
+        padding: 1em 0; }
         #header .header #navbar .nav-list ul li {
           list-style: none; }
           #header .header #navbar .nav-list ul li a {
@@ -1343,7 +1342,7 @@ body {
             text-decoration: none;
             color: #fff;
             text-transform: uppercase;
-            padding: 20px;
+            padding: 1em;
             display: block;
             text-align: left;
             font-family: 'Gruppo', cursive;
@@ -1384,11 +1383,27 @@ body {
           width: fit-content;
           background-color: transparent; }
           #header .header #navbar .nav-list ul li {
-            display: inline-block; }
+            display: inline-block;
+            position: relative; }
+            #header .header #navbar .nav-list ul li::before {
+              position: absolute;
+              content: '';
+              bottom: 0;
+              left: 50%;
+              transform: translateX(-50%);
+              width: 0%;
+              opacity: 0;
+              height: 3px;
+              background-color: skyblue;
+              transition: .3s ease; }
+            #header .header #navbar .nav-list ul li:hover::before {
+              width: 30%;
+              opacity: 1; }
             #header .header #navbar .nav-list ul li a {
               font-size: .9em;
               padding: .3em 1em;
-              margin: 0 auto; }
+              margin: 0 auto;
+              display: block; }
               #header .header #navbar .nav-list ul li a i {
                 margin-right: .3em;
                 padding: .5em;
