--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -54,7 +54,7 @@ body {
             justify-content: space-between;
             width: 100%;
             height: 100%;
-            padding: 3vh 5vw;
+            padding: 1vh 5vw;
             @media (max-width: 1024px) {
                 padding: 0 5vw;
             }
@@ -75,9 +75,6 @@ body {
 
             .nav-list {
                 .links-container {
-                    @media (max-width: 380px) {
-                        overflow-y: scroll;
-                    }
                     @media (max-width: 1024px) {
                         position: absolute;
                         top: 0;
@@ -89,6 +86,7 @@ body {
 
                         ul {
                             margin: 25vh 5vw;
+                            overflow-y: scroll;
                         }
                     }
                     &.active {
@@ -103,8 +101,8 @@ body {
                     .nav-avi {
                         // nav avi on small screens
                         @media (max-width: 360px){
-                            height: 4em;
-                            width: 4em;
+                            height: 3.5em;
+                            width: 3.5em;
                         }
                         // end of nav avi on small screens
                         height: 5em;
@@ -168,8 +166,9 @@ body {
                     overflow-x: hidden;
                     transition: 0.5s ease left;
                     position: relative;
-                    border: none;
+                    border: 1px solid $trans-border;
                     outline: none;
+                    padding: 1em 0;
 
                     li {
                         list-style: none;
@@ -181,7 +180,7 @@ body {
                             text-decoration: none;
                             color: $text-white;
                             text-transform: uppercase;
-                            padding: 20px;
+                            padding: 1em;
                             display: block;
                             text-align: left;
                             font-family: 'Gruppo', cursive;
@@ -233,11 +232,6 @@ body {
                             }
                         }
                     }
-                    // display nav list on toggle 
-                    // &.active {
-                    //     left: 20%;
-                    //     background-color: $nav-active-background;
-                    // }
                 }
                 // end of mobile screens style
                 // desktop nav-list style
@@ -251,11 +245,33 @@ body {
 
                         li {
                             display: inline-block;
+                            position: relative;
+                            // list item underline
+                            &::before {
+                                position: absolute;
+                                content: '';
+                                bottom: 0;
+                                left: 50%;
+                                transform: translateX(-50%);
+                                width: 0%;
+                                opacity: 0;
+                                height: 3px;
+                                background-color: $link-blue;
+                                transition: .3s ease;
+                            }
+                            &:hover {
+                                &::before {
+                                    width: 30%;
+                                    opacity: 1;
+                                }
+                            }
+                            // end of list item underline
                             
                             a {
                                 font-size: .9em;
                                 padding: .3em 1em;
                                 margin: 0 auto;
+                                display: block;
 
                                 i {
                                     margin-right: .3em;
