--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -86,7 +86,7 @@ body {
 
                         ul {
                             margin: 25vh 5vw;
-                            overflow-y: scroll;
+                            // overflow-y: scroll;
                         }
                     }
                     &.active {
