--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -147,6 +147,13 @@ body {
 
                             i {
                                 margin-left: .5em;
+                                animation: bird 5s infinite ;
+
+                                @keyframes bird {
+                                    100% {
+                                        transform: rotateY(360deg);
+                                    }
+                                }
                             }
                         }
                     }
