--- a/css/style2.css
+++ b/css/style2.css
@@ -454,7 +454,16 @@ hamburger
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            box-shadow: 2px 2px 5px #000, inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a; }
+            box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a;
+            animation: skill-icon 10s linear infinite; }
+
+@keyframes skill-icon {
+  25% {
+    box-shadow: inset -2px 2px 5px #ddda, inset 2px -2px 5px #000a; }
+  50% {
+    box-shadow: inset 0px -2px 3px #ddda, inset 0px 2px 5px #000a; }
+  75% {
+    box-shadow: inset 2px 0px 3px #ddda, inset -2px 0px 5px #000a; } }
           #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon img {
             width: 100%; }
         #skills .dropdown .dropdown-content .skills-bottom .skills-item h2 {
