--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -351,9 +351,26 @@
                             width: 100%;
                             height: 100%;
                             border-radius: 50%;
-                            box-shadow: 2px 2px 5px #000,
-                                inset 2px 2px 3px #ddda,
-                                inset -2px -2px 5px #000a;
+                            box-shadow: 
+                                        inset 2px 2px 3px #ddda,
+                                        inset -2px -2px 5px #000a;
+                            animation: skill-icon 10s linear infinite;
+
+                            @keyframes skill-icon {
+                                25% {
+                                    box-shadow: 
+                                            inset -2px 2px 5px #ddda,
+                                            inset 2px -2px 5px #000a;
+                                }
+                                50% {
+                                    box-shadow: inset 0px -2px 3px #ddda,
+                                                inset 0px 2px 5px #000a;
+                                }
+                                75% {
+                                    box-shadow: inset 2px 0px 3px#ddda,
+                                                inset -2px 0px 5px #000a;
+                                }
+                            }
                         }
                         // end of icon box shadow
                         // icon img
