--- a/css/style2.css
+++ b/css/style2.css
@@ -440,7 +440,8 @@ hamburger
           padding: 10px;
           margin-top: 15px;
           margin-bottom: 20px;
-          position: relative; }
+          position: relative;
+          isolation: isolate; }
           #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon#git-icon img, #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon#netlify-icon img {
             width: 100%;
             border-radius: 50%; }
@@ -454,16 +455,28 @@ hamburger
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a;
+            z-index: -1;
+            box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a, 5px 5px 4px #000;
             animation: skill-icon 10s linear infinite; }
 
 @keyframes skill-icon {
   25% {
-    box-shadow: inset -2px 2px 5px #ddda, inset 2px -2px 5px #000a; }
+    box-shadow: inset -2px 3px 3px #ddda, inset 2px -2px 5px #000a, -5px 5px 4px #000; }
   50% {
-    box-shadow: inset 0px -2px 3px #ddda, inset 0px 2px 5px #000a; }
+    box-shadow: inset 0px -1px 3px #ddda, inset 0px 2px 5px #000a, 0 2px 4px #000; }
   75% {
-    box-shadow: inset 2px 0px 3px #ddda, inset -2px 0px 5px #000a; } }
+    box-shadow: inset 2px 0px 3px #ddda, inset -2px 0px 5px #000a, -2px 2px 4px #000; } }
+          #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::after {
+            position: absolute;
+            content: '';
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #29323c;
+            border-radius: 50%;
+            z-index: -2;
+            opacity: .4; }
           #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon img {
             width: 100%; }
         #skills .dropdown .dropdown-content .skills-bottom .skills-item h2 {
