--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -342,7 +342,8 @@
                         margin-top: 15px;
                         margin-bottom: 20px;
                         position: relative;
-                        // icon box shadow
+                        isolation: isolate;
+                        // icon box shadow and background
                         &::before {
                             content: '';
                             position: absolute;
@@ -351,26 +352,43 @@
                             width: 100%;
                             height: 100%;
                             border-radius: 50%;
+                            z-index: -1;
                             box-shadow: 
                                         inset 2px 2px 3px #ddda,
-                                        inset -2px -2px 5px #000a;
+                                        inset -2px -2px 5px #000a,
+                                        5px 5px 4px #000;
                             animation: skill-icon 10s linear infinite;
 
                             @keyframes skill-icon {
                                 25% {
                                     box-shadow: 
-                                            inset -2px 2px 5px #ddda,
-                                            inset 2px -2px 5px #000a;
+                                            inset -2px 3px 3px #ddda,
+                                            inset 2px -2px 5px #000a,
+                                            -5px 5px 4px #000;
                                 }
                                 50% {
-                                    box-shadow: inset 0px -2px 3px #ddda,
-                                                inset 0px 2px 5px #000a;
+                                    box-shadow: inset 0px -1px 3px #ddda,
+                                                inset 0px 2px 5px #000a,
+                                                0 2px 4px #000 ;
                                 }
                                 75% {
                                     box-shadow: inset 2px 0px 3px#ddda,
-                                                inset -2px 0px 5px #000a;
+                                                inset -2px 0px 5px #000a,
+                                                -2px 2px 4px #000;
                                 }
                             }
+                        }
+                        &::after {
+                            position: absolute;
+                            content: '';
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            background-color: $overlay-blue-dark;
+                            border-radius: 50%;
+                            z-index: -2;
+                            opacity: .4;
                         }
                         // end of icon box shadow
                         // icon img
